# cmake-example-project

./: CMakeLists.txt  LICENSE  README.md
myApp/: CMakeLists.txt  main.c
myLib/: CMakeLists.txt
myLib/include/: library.h
myLib/src/: library.c
myLibTest/: CMakeLists.txt  main.c  minunit.h
